--- a/Illumina_QC/03-QC_tutorials.Rmd
+++ b/Illumina_QC/03-QC_tutorials.Rmd
@@ -20,6 +20,18 @@ Before running any examples let us change directory to the Illumina Quality cont
 cd QC_workshop/Illumina_QC/
 ```
 
+## Conda
+```{r, fig.align = 'center',out.width= '10%', echo=FALSE }
+knitr::include_graphics(path = "figures/conda.png", auto_pdf = TRUE)
+```
+
+We need to activate the  `illumina_qc` `conda` environment in your terminal so we have access to all the tool we need. The first step is to use `chos 8` which is a custom command for our cluster. It will Change the Unix OS to version 8 as version 7 (default in our cluster) is too old for some of the programs.
+
+```{bash eval=FALSE}
+chos 8
+. usemetawrap
+```
+
 ## Good quality Genomic dataset {#goodtutorial}
 ```{r, fig.align = 'center',out.width= '20%', echo=FALSE }
 knitr::include_graphics(path = "figures/bacteria.png", auto_pdf = TRUE)
@@ -67,7 +79,7 @@ Please see the following link for more info on the foreground and background: ht
 
 Using firefox have a look at the output html reports and answer the following questions.
 
-Open all the fastqc html files in the directory.
+Open all the `fastqc` html files in the directory.
 
 __Note__: The `*` is a wildcard character that represents anything. `*_fastqc.html` represents all the files that end with `_fastqc.html`.
 
@@ -110,17 +122,17 @@ ls
 knitr::include_graphics(path = "figures/magnify_glass_27AUG2020.png", auto_pdf = TRUE)
 ```
 
-Next we\'ll make a directory for the fastqc output
+Next we\'ll make a directory for the `fastqc` output
 ```{bash eval=FALSE}
 mkdir raw_fastqc_output
 ```
 
-Now run fastqc on the all paired read files (`*.fastq` representing al the files that end with `.fastq`)
+Now run `fastqc` on the all paired read files (`*.fastq` representing al the files that end with `.fastq`)
 ```{bash eval=FALSE}
 fastqc -o raw_fastqc_output *.fastq
 ```
 
-We can open the fastqc output with the following command
+We can open the `fastqc` output with the following command
 ```{bash eval=FALSE}
 firefox raw_fastqc_output/*_fastqc.html &
 ```
@@ -158,6 +170,7 @@ To run `trimmomatic` with the reads we will use the below command.
 ```{bash eval=FALSE}
 trimmomatic PE \
 -phred33 \
+B_cereus_R1.fastq B_cereus_R2.fastq \
 -baseout B_cereus.fastq \
 SLIDINGWINDOW:4:20 MINLEN:50
 ```
@@ -171,7 +184,7 @@ __Parameters__:
 - `SLIDINGWINDOW`: This will cause siding window trimming to be carried out. The `:4:20` specify the window size (4) and the average quality required to retain the window (20).
 - `MINLEN`: This specifies the minimum length for a read to be retained. We have set this to 50 (`:50`).
 
-__Note__: When using `Trimmomatic` on future data ensure you change the input files and the `-baseout` parameter to match your data.
+__Note__: When using `trimmomatic` on future data ensure you change the input files and the `-baseout` parameter to match your data.
 
 Once the command is run it will give you some useful output to the screen.
 Based on it, approximately what percentage of paired reads were kept?
@@ -220,7 +233,7 @@ Some things to note:
 - The amount of reads has significantly decreased due to quality control. This is expected, however this will need to be taken into account. If you do not have enough reads for the downstream analysis you will need to be less stringent on the trimming or filtering. What is the minimum number of reads required for downstream analysis? Unfortunately this depends on the specific analysis at hand. For genome assemblies generally the rule of thumb is you want at least 20 times as much bases in the reads as would be in the final assembly (based on the genome size of the organisms).
 - R2 quality is still worse than R1 quality. Again this is normal.
 - The quality controlled reads of the reverse reads still drop below Q28 towards the end of the reads. This is pretty typical. You could be more stringent but as previously mentioned you may be removing too many reads.
-- The overrepresented sequences which were Illumina adapters needed for sequencing were removed by sickle. This is good as we don\’t need them any more.
+- The overrepresented sequences which were Illumina adapters needed for sequencing were removed by `trimmomatic`. This is good as we don\’t need them any more.
 
 __Note__: If you are getting data from a sequencing centre they will have mostly removed the adapters already. Been sure to check they are not appearing in the Overrepresented sequences or the Adapter Content section of the `fastqc` report after trimming before continuing. 
 
