--- a/Illumina_QC/02-Cluster_Introduction.Rmd
+++ b/Illumina_QC/02-Cluster_Introduction.Rmd
@@ -28,7 +28,7 @@ knitr::include_graphics(path = "figures/terminal_window.png", auto_pdf = TRUE)
 
 Already there is useful information for us on the terminal window.
 
-- __nsc006__: This is the login name, also known as the username. In this case nsc006 is a demonstrator\'s account. Your screen should show a different account name which will be your username for the Linux machine/cluster you are logged into.
+- __nsc065__: This is the login name, also known as the username. Your screen will show your username for the Linux machine/cluster you are logged into.
 - __gauss03__: This is the machine name the user is logged into.
 - __\~__: This represents the current directory of the user, or the directory a command was run in. In the Linux OS and others __\'~\'__ is a shortcut to the user's home directory.
 - Everything after the __\'$\'__ is where commands are typed into the terminal. This is also referred to as the command line.
