--- a/Illumina_QC/01-Illumina_Quality_Control.Rmd
+++ b/Illumina_QC/01-Illumina_Quality_Control.Rmd
@@ -1,6 +1,6 @@
 --- 
 title: "Illumina Quality Control"
-author: "Matthew Gemmell"
+author: "Matthew R. Gemmell"
 date: "`r Sys.Date()`"
 site: bookdown::bookdown_site
 output: bookdown::gitbook
@@ -12,6 +12,14 @@ favicon: figures/NEOF_favicon.png
 description: NEOF book for the Illumina quality control workshop
 cover-image: "figures/NEOF.png"
 ---
+
+```{r cite-packages, include = FALSE}
+# automatically create a bib database for R packages
+# add any packages you want to cite here
+knitr::write_bib(c(
+  .packages(), 'bookdown', 'webexercises'
+), 'packages.bib')
+```
 
 ```{r, fig.align = 'center',out.width= '30%', echo=FALSE }
 knitr::include_graphics(path = "figures/NEOF.png", auto_pdf = TRUE)
