--- a/long_read_qc/08-NanoFilt.Rmd
+++ b/long_read_qc/08-NanoFilt.Rmd
@@ -7,7 +7,12 @@ knitr::include_graphics(path = "figures/quality_filtering.png", auto_pdf = TRUE)
 
 It is always important to know what your data is and if your planned filtering and trimming is appropriate. For example, you may be working with amplicon data where the read lengths will vary between 500bp and 750bp. In that case it is useful to set a min length of 500 and a maxlength of 750.
 
-This data is from a genome so wanting long and high quality reads is appropriate. Overall the quality of our data looks good. The main exception is the low amount of sequencing/coverage. The low coverage is because it is a subset of the whole data for workshop purposes (the full dataset would take too long to run through). There are some shorter length and lower quality reads which we will remove.
+This data is from a genome so wanting long and high quality reads is appropriate. Overall the quality of our data looks good. The main exception is the low amount of sequencing/coverage. The low coverage is because it is a subset of the whole data for workshop purposes (the full dataset would take too long to run here). There are some shorter length and lower quality reads which we will remove.
+
+## NanoFilt: run
+```{r, fig.align = 'center',out.width= '15%', echo=FALSE }
+knitr::include_graphics(path = "figures/enter_key_purple.png", auto_pdf = TRUE)
+```
 
 First we will create an output directory.
 ```{bash eval=FALSE}
