--- a/long_read_qc/Long read Quality Control.Rmd
+++ b/long_read_qc/Long read Quality Control.Rmd
@@ -764,6 +764,11 @@ knitr::include_graphics(path = "figures/finish.png", auto_pdf = TRUE)
 
 After trimming or filtering reads (quality control) it is always important to carry out a quality check. We will therefore run NanoPlot again.
 
+## Final NanoPlot
+```{r, fig.align = 'center',out.width= '15%', echo=FALSE }
+knitr::include_graphics(path = "figures/nanoplot_hexes.png", auto_pdf = TRUE)
+``` 
+
 __Note__: We are using a long informative output directory name. This is important as we may need to rerun NanoFilt a few more times with different options until we are happy. 
 
 ```{bash eval=FALSE}
@@ -782,27 +787,377 @@ Now inspect the report
 firefox nanoplot/nanofiltq10minlen500_porechop/Acinetobacter_NanoPlot-report.html
 ```
 
+## ONT QC considerations
+```{r, fig.align = 'center',out.width= '15%', echo=FALSE }
+knitr::include_graphics(path = "figures/considerations.png", auto_pdf = TRUE)
+``` 
+
 Ultimately when quality checking we need to take into account how much data we are left with. We need to make sure we have a good amount of bases and reads for our application. However, we also want to make sure we aren\'t left with a lot of poor quality data.
 
 Depending on our application the quality of the reads may be less important, or the other way around. This is the same with the amount of reads and bases. What is needed will be clearer when you know what type of data you have. These considerations will be covered in our future workshops of the specific data types
 
 A quick example is data for a genome assembly. For this type of analysis we will want our number of bases to reach a certain coverage. We\'ll want a decent quality but a high coverage can help overcome lower quality (more on this in a future workshop). Generally for ONT assemblies you will want 20X - 100X coverage with a higher coverage producing a better assembly (100x coverage= 100bp sequencing data per 1bp of the genome size). Higher coverages may be worse as it can be too much information for an assembly algorithm to cope with.
 
-In addition to the amount of bases, the length of reads is also important. One read that is 10kbp long is most likely better than 10 reads that are each 1kbp long for a genome assembly. This is because less reads will need to be assembled.
+In addition to the amount of bases, the length of reads is also important. One read that is 10kbp long is likely better than 10 reads that are each 1kbp long for a genome assembly. This is because less reads need to be assembled.
 
-Keeping all this in mind, let\'s say this sequencing is for a genome with a size of 0.5 Mbp (0.5 million base pairs). We want at least 20X coverage (i.e 10,000,000 total bases). Do we have this for the data that was porechopped and nanofiltered?
+## NanoFilt Reattempts
+```{r, fig.align = 'center',out.width= '15%', echo=FALSE }
+knitr::include_graphics(path = "figures/retry.png", auto_pdf = TRUE)
+``` 
 
-If not, try running NanoFilt with a different choices for `--q` until you do. 
+Keeping all this in mind, let's say this sequencing is for a genome with a size of 0.5 Mbp (0.5 million base pairs). We want at least 20X coverage (i.e 10,000,000 total bases). Do we have this for the data that was porechopped and nanofiltered?
+
+If not, try running `NanoFilt` with a different choice for `--q` until you do. Then attempt to answer the questions below. These aren't MCQs as you will get different answers based on what value you use for `--q`.
 
 + What is an option that works to get the desired coverage? 
 + Is the overall quality decent (Mean & Median read quality > 10)?
-+ What is the N50 of your QC\'d reads?
++ What is the N50 of your QC'd reads?
 + How many extra reads and bases did you retain compared to the Q10 filtering?
 
 Tips:
 
 + Make sure your new output paths have unique names.
-+ Use NanoPlot results to compare the Q10 filtering to your own. The NanoStat part is especially helpful.
++ Use `NanoPlot` results to compare the Q10 filtering to your own. The `NanoStat` part is especially helpful.
+
+## ONT Recap
+```{r, fig.align = 'center',out.width= '15%', echo=FALSE }
+knitr::include_graphics(path = "figures/recap.png", auto_pdf = TRUE)
+```
+
+That is the end of the ONT QC section.
+
+We carried out:
+
+- `NanoStat`: Produced read quality and length stats of our raw reads.
+- `Porechop`: Removed adapters from our reads.
+- `NanoPlot`: Produced read quality and length stats and plots of our porechopped reads.
+- `NanoFilt`: Filtered our porechopped reads based on quality and length.
+- Final check: `NanoPlot` of our filtered reads. It is always good to check the quality after every quality control step.
 
 <!--chapter:end:09-ONT_final_check.Rmd-->
+
+```{r include=FALSE, cache=FALSE}
+suppressPackageStartupMessages({
+  library(webexercises)
+})
+
+knitr::knit_hooks$set(webex.hide = function(before, options, envir) {
+  if (before) {
+    if (is.character(options$webex.hide)) {
+      hide(options$webex.hide)
+    } else {
+      hide()
+    }
+  } else {
+    unhide()
+  }
+})
+```
+# (PART\*) PacBio {.unnumbered}
+
+# PacBio Background {#pb}
+
+```{r, fig.align = 'center',out.width= '40%', echo=FALSE }
+knitr::include_graphics(path = "figures/Pacbio_logo.png", auto_pdf = TRUE)
+``` 
+
+In this section we will quality check PacBio sequencing raw data (BAM files), perform a filter to retain only the longest reads and output the data in fastq format.
+
+## File formats
+```{r, fig.align = 'center',out.width= '15%', echo=FALSE }
+knitr::include_graphics(path = "figures/files.png", auto_pdf = TRUE)
+``` 
+
+Sequence data from PacBio are output as subreads in unaligned BAM format. (Further explanation of the BAM format is in section 3.1.3).
+
+The figure below shows a schematic of a circular DNA molecule of a PacBio library with the colours representing:
+
+- Black, I = Insert DNA, i.e\. the double-stranded DNA of your sample
+- Red, B = Barcodes, optional single (Left or Right) or double (Left & Right) for multiplexing samples
+- Green, A = Adapter, SMRTbell adapters with a double-stranded stem and single-stranded hairpin loop.
+
+```{r, fig.align = 'center',out.width= '90%', echo=FALSE }
+knitr::include_graphics(path = "figures/smrtbell.png", auto_pdf = TRUE)
+``` 
+
+Sequencing follows the direction of the arrows and continues around until either the end of the sequencing run or if the DNA polymerase fails.
+
+PacBio sequencing takes place in Zero-Mode Waveguides (ZMWs) on a sequencing cell. These are tiny holes where a DNA polymerase binds a single molecule of DNA for sequencing, and each DNA base is detected when a labelled nucleotide is incorporated and fluoresces when excited by light.
+
+A ZMW read consists of the data collected from a single ZMW, with the HQ (high quality) region recorded when just a single molecule of DNA is present in the ZMW.
+
+```{r, fig.align = 'center',out.width= '90%', echo=FALSE }
+knitr::include_graphics(path = "figures/zmw.png", auto_pdf = TRUE)
+``` 
+
+This schematic shows the structure of a ZMW read in linear format. Insert DNA subreads are interspersed with the barcode and adapter sequence of the SMRTbell library.
+For more information see: https://pacbiofileformats.readthedocs.io/en/10.0/Primer.html
+
+__subreads.bam file__
+
+This contains the sequence for each read (or pass) of the insert DNA (grey).
+
+__scraps.bam file__
+
+This contains the adapter (green) and barcode (red) sequences, as well as any low quality (black) regions.
+
+These BAM files will usually have an accompanying PacBio BAM index file (subreads.bam.pbi and scraps.bam.pbi).
+
+## CLR & CCS
+## Tools
+```{r, fig.align = 'center',out.width= '80%', echo=FALSE }
+knitr::include_graphics(path = "figures/clr_and_ccs.png", auto_pdf = TRUE)
+``` 
+
+PacBio data can be generated in two ways depending on the goal of the experiment.
+
+- __Continuous Long Reads (CLR)__ the aim is to produce sequence reads as long as possible, such as for genome assembly, sequencing through long repeat regions or finding other large structural variants. CLR runs usually generate one subread (i.e\. there would be just one or one and a bit of the grey insert regions shown above) and sequences have an error rate of ~ 10-15%.
+
+- __Circular Consensus Sequences (CCS)__ the aim is to sequence shorter molecules (up to 10-15kb max), such as amplicons, and to generate accurate consensus sequences. CCS runs generate higher-accuracy sequences from a consensus of many subreads (i.e\. there would be several of the grey insert regions shown above in every ZMW read).
+
+For this tutorial we will carry out quality checking and control on both CLR and CCS BAM files.
+
+## Tools
+```{r, fig.align = 'center',out.width= '15%', echo=FALSE }
+knitr::include_graphics(path = "figures/toolbox.png", auto_pdf = TRUE)
+``` 
+
+### SequelTools
+
+https://github.com/ISUgenomics/SequelTools
+
+We will use the `SequelTools` program to both assess and filter our PacBio CLR and CCS data.
+
+### smrttools
+
+https://www.pacb.com/wp-content/uploads/SMRT_Tools_Reference_Guide_v90.pdf
+
+We will also use `smrttools` from PacBio to:
+
+- Generate any missing index files
+- Generate CCS reads from subreads BAM files
+- Convert BAM to fasta/q format.
+
+### RabbitQC
+
+https://github.com/ZekunYin/RabbitQC
+
+Lastly, we will also use `RabbitQC` to assess the CCS assembled reads in fastq format.
+
+<!--chapter:end:10-PB_background.Rmd-->
+
+```{r include=FALSE, cache=FALSE}
+suppressPackageStartupMessages({
+  library(webexercises)
+})
+
+knitr::knit_hooks$set(webex.hide = function(before, options, envir) {
+  if (before) {
+    if (is.character(options$webex.hide)) {
+      hide(options$webex.hide)
+    } else {
+      hide()
+    }
+  } else {
+    unhide()
+  }
+})
+```
+# CLR: Setup
+```{r, fig.align = 'center',out.width= '30%', echo=FALSE }
+knitr::include_graphics(path = "figures/clr.png", auto_pdf = TRUE)
+``` 
+
+Before carrying out any specific commands we will first move into the relevant directory.
+
+```{bash eval=FALSE}
+cd ~/QC_workshop/PB_QC/data/CLR
+```
+
+Use `ls` to list the contents of this directory. You will see that there are BAM subreads and scraps files for three samples, plus their BAM index files. These data were generated from high molecular weight DNA for _de novo_ genome assembly.
+
+We will use the `SequelTools` program to both assess and filter our PacBio CLR data. First we need to make a file of filenames (fofn) for the subreads files. You can do this with the following commands:
+
+```{bash eval=FALSE}
+find $(pwd) -name "*subreads.bam" | sort > CLR_subreads.txt
+```
+
+This command line will find all of the files in our current working directory whose names end in \'subreads.bam\', sorts them alphanumerically and prints these names into a new text file.
+
+<!--chapter:end:11-PB_CLR_setup.Rmd-->
+
+```{r include=FALSE, cache=FALSE}
+suppressPackageStartupMessages({
+  library(webexercises)
+})
+
+knitr::knit_hooks$set(webex.hide = function(before, options, envir) {
+  if (before) {
+    if (is.character(options$webex.hide)) {
+      hide(options$webex.hide)
+    } else {
+      hide()
+    }
+  } else {
+    unhide()
+  }
+})
+```
+# CLR: QC
+```{r, fig.align = 'center',out.width= '15%', echo=FALSE }
+knitr::include_graphics(path = "figures/qc_inspection.png", auto_pdf = TRUE)
+``` 
+
+The `SequelTools` program has three different tools, specified with the `-t` argument, which are:
+
+- `Q` for quality control
+- `S` for subsampling the data
+- `F` for filtering the data
+
+We will use `Q` to assess our data. Other options used are:
+
+- `-u` to specify the file containing the list of subread .bam files
+- `-o` to specify the name of an output folder for the plots
+- `-p` to specify which plots to produce. 
+  - `b`: A few basic plots
+  - `i`: The basic plots and a few more detailed plots
+  - `a`: generates all available plots. This is what we will use.
+
+```{bash eval=FALSE}
+SequelTools.sh -t Q -p a -u CLR_subreads.txt -o CLR_QC
+```
+
+When this has finished running the CLR_QC folder will contain a \'summaryTable.txt\' file with values on the number and lengths of sequence reads for all three samples, plus a series of plots saved as pdf files. We can use firefox to view the pdf plots.
+
+```{bash eval=FALSE}
+firefox CLR_QC/totalBasesBarplot.pdf
+```
+
+This shows the total amount of sequence data for each of the three samples, both for all of the subreads present and \'longestSubs\' (the longest subread within each CLR). We can see that Sample2 has the largest amount of data, and for all three samples most of the data is contained within the longest subreads. This is expected with CLR data - long fragments of DNA are extracted for sequenicng and we often achieve just a single pass of this insert during the PacBio sequenicng run.
+
+There are also plots for the N50 and L50 of each sample:
+
+```{bash eval=FALSE}
+firefox CLR_QC/n50s.pdf CLR_QC/l50s.pdf
+```
+
+- N50 = the median sequence length (in bp) of the data; 50% of the sequence data generated is in subreads equal to or greater than this length.
+- L50 = the minimum number of subreads whose length makes up the N50 value.
+
+We can see that the N50 is larger for Sample3 compared to Sample1 and Sample2, suggesting the subreads are longer for Sample3. Conversely, the L50 is higher for Sample2, suggesting the subreads are shorter for this sample as more subreads are required to make up the N50 value.
+
+We can see information on the subread lengths in more detail as boxplots and histograms in the following plots:
+
+```{bash eval=FALSE}
+firefox CLR_QC/subreadSizesBoxplots.pdf CLR_QC/*Hists.pdf
+```
+
+The boxplots show that Sample3 does indeed have the longest subread lengths, and highest N50 as indicated by the blue diamond. Sample2 has a larger range of subread lengths than Sample1, but has a slightly lower median length and N50 value.
+
+The histograms show the distribution of subread lengths in more detail. Sample3 shows a big spike of very short subreads - why do you think this is? (We\'ll come back to this after the filtering step!)
+
+<!--chapter:end:12-PB_CLR_QC.Rmd-->
+
+```{r include=FALSE, cache=FALSE}
+suppressPackageStartupMessages({
+  library(webexercises)
+})
+
+knitr::knit_hooks$set(webex.hide = function(before, options, envir) {
+  if (before) {
+    if (is.character(options$webex.hide)) {
+      hide(options$webex.hide)
+    } else {
+      hide()
+    }
+  } else {
+    unhide()
+  }
+})
+```
+# CLR: Filtering
+```{r, fig.align = 'center',out.width= '10%', echo=FALSE }
+knitr::include_graphics(path = "figures/quality_filtering.png", auto_pdf = TRUE)
+``` 
+
+Our quality check of the PacBio data doesn\'t include any assessment of sequence quality. Unaligned PacBio data doesn\'t have a quality score in the same way as the Illumina data we looked at on Tuesday. Quality scores for PacBio are generated when the reads are aligned - either to a reference sequence or subreads aligned to each other to generate CCS reads. However, it is often a good idea to use just the longest PacBio reads for a _de novo_ assembly.
+
+To filter the data by minimum CLR length we will use SequelTools option `-t F`.
+
+Other options used are:
+
+- `-u` to specify the file containing the list of subread .bam files
+- `-c` to specify the file containing the list of scraps .bam files
+- `-C` to specify to filter by minimum CLR length
+- `-Z` to specify the minimum length to keep a CLR
+- `-f` to specify the format of the output files: `s`=sam, `b`=bam, `2`=both
+- `-o` to specify the name of an output folder for the filtered data files
+
+First we need to make a fofn for the scraps.bam files, as these are needed when using the filtering tool:
+```{bash eval=FALSE}
+find $(pwd) -name "*scraps.bam" | sort > CLR_scraps.txt
+```
+
+Then we can run the filtering command. Here we will keep only CLRs of at least 10,000 bp:
+```{bash eval=FALSE}
+SequelTools.sh -t F -u CLR_subreads.txt -c CLR_scraps.txt \
+-C -Z 10000 -f b -o filtered
+```
+
+When this has finished running the \'filtered\' folder will contain filtered BAM files for all three samples. Move into this folder using `cd`:
+```{bash eval=FALSE}
+cd filtered
+```
+
+From here let\'s run the quality control tool on the filtered files and compare the plots to those from the raw files. First we need a new fofn for the filtered subread files:
+```{bash eval=FALSE}
+find $(pwd) -name "*subreads.bam" | sort > filt_subreads.txt
+```
+
+Then run the quality control tool again:
+```{bash eval=FALSE}
+SequelTools.sh -t Q -p a -u filt_subreads.txt -o filt_QC
+```
+
+When this has finished running the \'filt_QC\' folder will contain a text file of summary values and a series of plots saved as pdf files. We can view these as before, for example:
+```{bash eval=FALSE}
+firefox filt_QC/subreadSizesBoxplots.pdf
+```
+
+And compare this to the boxplots from the unfiltered data:
+```{bash eval=FALSE}
+firefox ~/QC_workshop/PB_QC/data/CLR/CLR_QC/subreadSizesBoxplots.pdf
+```
+
+The difference looks quite subtle on the plots as the size range of reads is large, but the subread N50 value (indicated by the blue diamond) has increased by ~2,000 bp in the filtered data for Sample2 and Sample3.
+
+There are also still subreads present in the data that are < 10,000 bp. This is because we have filtered out CLRs that are < 10,000 bp, but a CLR > 10,000bp can still be made up of subreads smaller than this.
+
+This is definitely the case for Sample1 and Sample2, where the DNA fragment length of the library was shorter than the CLR lengths, hence there are subreads < 10,000 bp within longer CLRs.
+
+Sample3 shows a more obvious difference before and after filtering:
+```{bash eval=FALSE}
+firefox ~/QC_workshop/PB_QC/data/CLR/CLR_QC/Sample3.readLenHists.pdf \
+filt_QC/Sample3_flt.readLenHists.pdf
+```
+
+For this sample the DNA fragment length of the library was much greater than 10,000 bp, and so the majority of CLRs consist of just one pass of this long insert. The large number of short subreads remaining in the filtered file (blue bars) represent subreads only partially sequenced on the \'return journey\' of the circular library DNA molecule. These are not present when we look only at the longest subread present in each CLR (green bars).
+
+SequelTools doesn\'t have an option for filtering subreads by length. To do this we can convert the filtered BAM file to a fastq or fasta file and use another downstream tool. The fastq file will not contain any useful information on sequence quality (every base is assigned a quality character of \'!\' which is equal to zero), but this file format is useful if only fastq format is accepted as input for a downstream tool.
+
+To do this use the commands `pbindex` and `bam2fastq` from the smrttools package:
+```{bash eval=FALSE}
+pbindex Sample1_flt.subreads.bam
+```
+
+Note that you may see a long warning message ending with \"No such file or directory\". However, if you run `ls` you should see that the output file has been generated.
+
+This command generates a .pbi index file that is needed before we can convert the BAM file to fastq format. The `bam2fastq` command requires an output file prefix name, specified by `-o`, and the name of the BAM file we want to convert:
+```{bash eval=FALSE}
+bam2fastq -o Sample1_filtered Sample1_flt.subreads.bam
+```
+
+You should now have a compressed fastq file for the CLR-filtered subreads from Sample1.
+
+<!--chapter:end:13-PB_CLR_filtering.Rmd-->
 
